<resources>
    <!-- Title for the MainActivity [CHAR LIMIT=12] -->
    <string name="app_name" translatable="false">Leipzig Quiz</string>

    <!-- Title for the List Activity [CHAR LIMIT=12] -->
    <string name="ResultsName">Results</string>

    <!-- Text for the welcome screen [CHAR LIMIT=25] -->
    <string name="inputName">Please enter your name:</string>

    <!-- Hint for the name input [CHAR LIMIT=25] -->
    <string name="inputNameEdit">Name</string>

    <!-- Text for the welcome screen [CHAR LIMIT=25] -->
    <string name="inputAge">Please enter your age:</string>

    <!-- Hint for the name input [CHAR LIMIT=25] -->
    <string name="inputAgeEdit">Age</string>

    <!-- Text for the proceed button [CHAR LIMIT=25] -->
    <string name="proceedingButton">Start the quiz!</string>

    <!-- Welcome text of the app [CHAR LIMIT=30] -->
    <string name="welcomeText">Welcome to this quiz app about Leipzig. Feel free to visit this awesome city :)</string>


    <!-- First question [CHAR LIMIT=30] -->
    <string name="question1">1. How high is the tallest building in Leipzig? </string>

    <!-- First answer of the first question [CHAR LIMIT=12] -->
    <string name="question1Answer1" translatable="false">123m</string>

    <!-- Second answer of the first question [CHAR LIMIT=12] -->
    <string name="question1Answer2" translatable="false">142m</string>

    <!-- Third answer of the first question [CHAR LIMIT=12] -->
    <string name="question1Answer3" translatable="false">151m</string>


    <!-- Second question [CHAR LIMIT=40] -->
    <string name="question2">2. When did Napoleon lose the battle of the nations near Leipzig? </string>

    <!-- First answer of the second question [CHAR LIMIT=12] -->
    <string name="question2Answer1" translatable="false">1811</string>

    <!-- Second answer of the second question [CHAR LIMIT=12] -->
    <string name="question2Answer2" translatable="false">1813</string>

    <!-- Third answer of the second question [CHAR LIMIT=12] -->
    <string name="question2Answer3" translatable="false">1815</string>


    <!-- Third question [CHAR LIMIT=30] -->
    <string name="question3">3. Estimate how many people visited the christmas market in Leipzig 2017! </string>

    <!-- hint for the EditText estimation question [CHAR LIMIT=10] -->
    <string name="estimateHint">Enter your guess here </string>


    <!-- Fourth question [CHAR LIMIT=30] -->
    <string name="question4">4. Since Leipzig has two town halls, which one is the older one? </string>


    <!-- Fifth question [CHAR LIMIT=30] -->
    <string name="question5">5. Guess what "Leipziger Allerlei" (Leipzig\'s everything) is! </string>

    <!-- First answer of the fifth question [CHAR LIMIT=20] -->
    <string name="question5Answer1">A meal with vegetables </string>

    <!-- Second answer of the fifth question [CHAR LIMIT=20] -->
    <string name="question5Answer2">A music group from Leipzig</string>

    <!-- Third answer of the fifth question [CHAR LIMIT=20] -->
    <string name="question5Answer3">A very precious sculpture</string>


    <!-- Sixth question [CHAR LIMIT=40] -->
    <string name="question6">6. Guess how many undergraduates are currently in Leipzig! </string>

    <!-- First answer of the sixth question [CHAR LIMIT=20] -->
    <string name="question6Answer1">~ 11000 undergraduates</string>

    <!-- Second answer of the sixth question [CHAR LIMIT=20] -->
    <string name="question6Answer2">~ 54000 undergraduates</string>

    <!-- Third answer of the sixth question [CHAR LIMIT=20] -->
    <string name="question6Answer3">~ 38000 undergraduates</string>


    <!-- Seventh question [CHAR LIMIT=30] -->
    <string name="question7">7. Which famous componist created this piece: </string>

    <!-- First answer of the seventh question [CHAR LIMIT=20] -->
    <string name="question7Answer1" translatable="false">Johann Sebastian Bach</string>

    <!-- Second answer of the seventh question [CHAR LIMIT=20] -->
    <string name="question7Answer2" translatable="false">Felix Mendelssohn Bartholdy</string>

    <!-- Third answer of the seventh question [CHAR LIMIT=20] -->
    <string name="question7Answer3" translatable="false">Georg Friedrich Händel</string>


    <!-- Eighth question [CHAR LIMIT=30] -->
    <string name="question8">"8. Which rivers flows through Leipzig? "</string>

    <!-- First answer of the seventh question [CHAR LIMIT=20] -->
    <string name="question8Answer1" translatable="false">Weiße Elster</string>

    <!-- Second answer of the seventh question [CHAR LIMIT=20] -->
    <string name="question8Answer2" translatable="false">Elbe</string>

    <!-- Third answer of the seventh question [CHAR LIMIT=20] -->
    <string name="question8Answer3" translatable="false">Parthe</string>


    <!-- play Text for the toccata music button [CHAR LIMIT=15] -->
    <string name="playButton">Tap to play</string>

    <!-- Text for the result button if the user don't want to share it [CHAR LIMIT=15] -->
    <string name="ShowResults">Check your results</string>

    <!-- Text for the reset button [CHAR LIMIT=15] -->
    <string name="reset">Reset your score</string>

    <!-- Text for the error that the user did not input a name [CHAR LIMIT=25] -->
    <string name="errorEmptyName">Please enter a name</string>

    <!-- Text for the error that the user did not input a number at question 3 [CHAR LIMIT=25] -->
    <string name="errorEmptyGuests">Please enter a valid number at question 3</string>

    <!-- Text for the error that the user did not input a number for his age [CHAR LIMIT=25] -->
    <string name="errorEmptyAge">Please enter your age</string>

    <!-- Second Text for the final result  [CHAR LIMIT=25] -->
    <string name="finalString">Congratulations %1$s!\nYou scored %2$d/8 points in this quiz!\nThis is an official invitation to this wonderful city :)</string>

    <!-- Text for the subject of the E-Mail  [CHAR LIMIT=25] -->
    <string name="emailSubject">Leipzig quiz from\ </string>

    <!-- Text for the Share your Rersult button  [CHAR LIMIT=25] -->
    <string name="shareResult">Share your result </string>

    <!-- Text for the playerListing Activity  [CHAR LIMIT=25] -->
    <string name="PlayerListing">Show all results </string>

    <!-- Text for the reset of the app  [CHAR LIMIT=25] -->
    <string name="scoreReset">App successfully resetted. </string>

    <!-- Text for disabled back press button  [CHAR LIMIT=25] -->
    <string name="backPress">Back press disabled! </string>

    <!-- Text for failed CheckNetworkStatus  [CHAR LIMIT=25] -->
    <string name="NetworkStatus">Unable to connect to internet! </string>

    <!-- Text for adding a player  [CHAR LIMIT=25] -->
    <string name="AddPlayer">Adding Player. Please wait... </string>

    <!-- Text for listing all the results  [CHAR LIMIT=25] -->
    <string name="listResults">Loading results. Please wait... </string>

    <!-- Text for succesfully added player  [CHAR LIMIT=25] -->
    <string name="AddPlayerSuccess">Player Added successfully </string>

    <!-- Text for failure whil adding the new player  [CHAR LIMIT=25] -->
    <string name="AddPlayerFailure">Some error occurred while adding the player! </string>

    <!-- Text for alerting the user when the result is shared twice  [CHAR LIMIT=25] -->
    <string name="alreadyShared">Your score has been shared previously! </string>
</resources>
