<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="@dimen/heightPictureBlazon"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/wappen" />

        <TextView
            style="@style/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcomeText" />

        <View style="@style/separationBar" />


        <TextView
            style="@style/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/inputName" />

        <EditText
            android:id="@+id/nameInput"
            style="@style/EditTextStyle"
            android:gravity="center"
            android:hint="@string/inputNameEdit"
            android:inputType="textCapWords" />

        <TextView
            style="@style/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/inputAge" />

        <EditText
            android:id="@+id/ageInput"
            style="@style/EditTextStyle"
            android:gravity="center"
            android:hint="@string/inputAgeEdit"
            android:inputType="number" />

        <Button
            android:id="@+id/proceedingButton"
            style="@style/ButtonStyle"
            android:text="@string/proceedingButton" />


    </LinearLayout>
</ScrollView>
